# cmake-custom_target-cross

./: CMakeLists.txt  FOOCompileToolsConfig.cmake  README.md  toolchain-foo.cmake
